--- a/learme-platform-ui/package.json
+++ b/learme-platform-ui/package.json
@@ -13,6 +13,7 @@
         "register-service-worker": "^1.6.2",
         "vue": "^2.6.10",
         "vue-router": "^3.0.3",
+        "vue-touch": "^2.0.0-beta.4",
         "yarn": "^1.16.0"
     },
     "devDependencies": {
